workin on the quiz

--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
 }
 
 body {
-    background-image: url('images/background.png');
-    margin: 0;
+  margin: 0;
 }
 
 .board {
@@ -65,11 +64,33 @@ body {
 .cell.x::after,
 .cell.circle::before {
   background-color: black;
-  image
 }
 
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after,
+.board.circle .cell:not(.x):not(.circle):hover::before {
+  background-color: lightgrey;
+}
 
+.cell.x::before,
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after {
+  content: '';
+  position: absolute;
+  width: calc(var(--mark-size) * .15);
+  height: var(--mark-size);
+}
 
+.cell.x::before,
+.board.x .cell:not(.x):not(.circle):hover::before {
+  transform: rotate(45deg);
+}
+
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::after {
+  transform: rotate(-45deg);
+}
 
 .cell.circle::before,
 .cell.circle::after,
@@ -127,3 +148,9 @@ body {
 }
 
 // End of Tic Tac Toe //
+
+//beginning of the quiz//
+
+
+
+//end of quiz // 
