workin on the code

--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #eeeeee;
+    background-image: url("images/background.png");
 }
 
 .grid {
@@ -24,9 +24,10 @@ body {
 }
 
 #score {
-    color: #5A6772;
+    color: rgb(34, 130, 214);
     text-align: center;
     font-size: 30px;
+    <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/Y4QBaJvDdxzYFDm77E" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
 }
 
 .grid #question {
